applications/nodejs-poolcontroller/manifests/deployment-dashpanel.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-poolcontroller-dashpanel
spec:
  selector:
    matchLabels:
      app: nodejs-poolcontroller-dashpanel
  template:
    metadata:
      labels:
        app: nodejs-poolcontroller-dashpanel
    spec:
      containers:
        - image: ghcr.io/bojanzelic/nodejs-poolcontroller-dashpanel:latest
          name: nodejs-poolcontroller-dashpanel
          ports:
            - containerPort: 5150
          volumeMounts:
          - name: config
            mountPath: /app/config.json
      volumes:
      - name: config
        configMap:
          name: poolcontroller-dash-config
          items:
          - key: config.json
            path: config.json
