applications/nodejs-poolcontroller/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-poolcontroller
spec:
  selector:
    matchLabels:
      app: nodejs-poolcontroller
  template:
    metadata:
      labels:
        app: nodejs-poolcontroller
    spec:
      containers:
        - image: tagyoureit/njspc:latest
          name: nodejs-poolcontroller
          ports:
            - containerPort: 4200
          volumeMounts:
          - name: config
            mountPath: /app/config.json
            subPath: config.json
      volumes:
      - name: config
        configMap:
          name: poolcontroller-config
