applications/nodejs-poolcontroller/manifests/svc-dashpanel.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-poolcontroller-dashpanel
spec:
  selector:
    app: nodejs-poolcontroller-dashpanel
  ports:
  - port: 5150
    targetPort: 5150
  type: ClusterIP
