applications/nodejs-poolcontroller/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-poolcontroller
spec:
  selector:
    app: nodejs-poolcontroller
  ports:
  - port: 4200
    targetPort: 4200
  type: ClusterIP
