applications/nodejs-poolcontroller/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: 03d39176-e294-4b8a-8895-23b83f7e1063.cfargotunnel.com
  name: nodejs-poolcontroller
spec:
  ingressClassName: traefik
  rules:
  - host: nodejs-poolcontroller.zelic.io
    http:
      paths:
      - backend:
          service:
            name: nodejs-poolcontroller-dashpanel
            port:
              number: 5150
        path: /
        pathType: Prefix
